# GaOTTT

./: .gitignore  .mcp copy.json  .mcp.json  .mcp.json.example  CLAUDE.md  README.md  README_for_LLM.md  README_ja.md  SKILL.md  ToDo.md  config.json.example  ger_rag.faiss.ids  init-plan.md  opencode.json.example  plan.md  pyproject.toml
.codex/: hooks.json
.github/workflows/: perf-tests.yml  sync-wiki.yml
deploy/: gaottt-embedder.service
docs/: api-reference.md  architecture.md  backend-improvement-plan.md  handover.md  operations.md  persona-and-task-plan.md  skill-md-improvement-plan.md
docs/handoff/: 2026-06-14-play-session-improvement-observations.md
docs/maintainers/: GaOTTT_review.md  README.md  evaluation-2026-05-15.md  evaluation-2026-05-27-free-exploration.md  handover-2026-05-11-phase-g-h.md  handover-2026-05-11-phase-i-self-knowledge.md  handover-2026-05-12-self-knowledge-completion.md  handover-2026-05-13-phase-i-stage-3.md  handover-2026-05-13-phase-j-stage-1.md  handover-2026-05-13-phase-j-stage-2.md  handover-2026-05-13-phase-j-stage-3.md  handover-2026-05-13-phase-k-stage-1.md  handover-2026-05-13-phase-m-draft.md  handover-2026-05-14-phase-i-stage4-production.md  handover-2026-05-14-phase-l-stage-1.md  handover-2026-05-21-self-knowledge-cycle-2.md  handover-2026-05-26-dogfooding-external-perspective.md  handover-2026-05-26-dogfooding-usage-feel.md  handover-2026-05-27-me.md  handover-2026-05-27-save-candidates-v1-v2.md  handover-2026-05-30-phase-q-orbital-mechanics.md  handover-2026-06-01-concurrent-recall-session-termination.md  handover-2026-06-01-free-exploration-session.md  handover-2026-06-02-faiss-write-behind-test-hang.md  handover-2026-07-02-multiverse-mv0-mv1.md  handover.md  multiverse-implementation-plan.md  multiverse-mv0-mv1-execution-plan.md  rename-handover.md  verification-2026-05-26-stage-7-phase-n.md
docs/research/: Failure-Analysis-Report.md  LLM-Behavioral-Comparison-Scenarios.md  Research-VRAM-RAM-Measurement-2026-05-28.md  cooccurrence-blackhole-design.md  dogfooding-review-2026-06-12.md  evaluation-report.md  exploration_report.md  gravitational-displacement-design.md  gravity-as-optimizer.md  gravity-wave-propagation-design.md  habituation-escape-design.md  mcp-server-design.md  mcp_concept.md  multi-agent-experiment-2026-04-21.md  orbital-mechanics-design.md
docs/wiki/: Architecture-Concurrency.md  Architecture-Gravity-Model.md  Architecture-Overview.md  Architecture-Storage-And-Schema.md  Getting-Started.md  Guides-Ambient-Recall.md  Guides-Multi-Agent.md  (+72 more)
eval_output/: judge_prompt.md  judge_scores.json  result-round10.md  results.json  session_judge_prompt.md  session_results.json  session_scores.json
examples/: README.md
gaottt/: config.py
ger_rag/: config.py
scripts/: acceptance_phase_h_stage5.py  avatar.py  bench_dream_loop.py  benchmark.py  bootstrap_report.py  compare_retrieval.py  diag_assoc_halo.py  diag_cluster_coverage.py  diag_dormant.py  diag_dynamics.py  diag_pressure.py  diag_production_acceptance.py  diag_recall.py  eval_aggregate.py  eval_clone_env.sh  eval_compute.py  eval_export.py  eval_openrouter_toolcheck.py  eval_run_phase2.sh  eval_run_scenario.py  load_chat.py  load_csv.py  load_files.py  mcp_smoke.py  measure_ambient_recall.py  measure_instruction_tokens.py  migrate.py  perf_baseline.py  perf_diff.py  phase_n_dry_run.py  prime_gravity.py  probe_ambient_nondeterminism.py  probe_pure_crosslingual.py  probe_rikka_botan.py  rebuild_faiss_from_db.py  reset_displacements.py  reset_masses.py  rest_smoke.py  ritual_retrospective_supernova.py  run_benchmark_isolated.sh  (+3 more)
(+199 files in other folders)
