[project]
name = "gaottt"
version = "0.1.0"
description = "Gravity as Optimizer Test-Time Training — gravity-based long-term memory that turned out to be a TTT framework (formerly GER-RAG)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sentence-transformers>=4.48.0",
    "transformers>=4.48.0",
    "faiss-cpu>=1.8.0",
    "aiosqlite>=0.20.0",
    "msgpack>=1.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    # MV1 RemoteEmbedder (gaottt.embedding.remote) — promoted from dev-only so
    # production installs without [dev] still resolve the HTTP client.
    "httpx>=0.27.0",
]

[project.optional-dependencies]
gpu = ["faiss-gpu>=1.8.0"]
# Phase L Stage 1 — optional Sudachi tokenizer for BM25 (decision D3).
# Default is char 3-gram (no extra deps). Install with:
#   uv pip install -e ".[bm25-sudachi]"
# to switch by setting GaOTTTConfig.bm25_tokenizer="sudachi".
bm25-sudachi = [
    "sudachipy>=0.6.0",
    "sudachidict_core>=20240409",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Hard per-test deadline so a wedged write-behind save (or any deadlock) fails
# fast WITH a thread-stack dump instead of hanging the run indefinitely (a
# ~2h isolation hang of a FAISS write-behind test motivated this). 120s clears
# every legitimate test incl. real-RURI perf tests; a slow one can override
# with @pytest.mark.timeout(N). "signal" dumps the traceback of where it blocked.
timeout = 120
timeout_method = "signal"
